<?xml version="1.0"?>
<package format="2">
  <name>decision_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for bringup nodes.</description>
  <maintainer email="2893734607@qq.com">Li Jiahao</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

</package>
